k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-eks-2048 # name of Deployment
  labels:
    app: simple-eks-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-eks-2048 # how the Deployment finds and manages its own pods.

  template: #blueprint for each pods
    metadata:
      labels:
        app: simple-eks-2048
        #must match selector label, to link deployment to pods it creates.
    spec:
      containers:
      - name: simple-eks-2048
        image: 761639968218.dkr.ecr.eu-west-2.amazonaws.com/simple-eks-2048:latest
        ports:
        - containerPort: 80 #documentation - container listens on port 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3

          # K8s hits http://<pod-ip>:80/ every periodSeconds (10s). 
          # initialDelaySeconds: 10 — wait 10 seconds after the container starts before 
          # the first check (give it time to boot). failureThreshold: 3 — if it fails 
          # 3 times in a row, K8s kills and restarts the container.
