k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-eks-2048
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eks.digitalcncloud.org
      secretName: simple-eks-2048-tls
  rules:
    - host: eks.digitalcncloud.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-eks-2048
                port:
                  number: 80
